Whitespace fixes in css files.

--- a/templates/vocabulary/lesson.css
+++ b/templates/vocabulary/lesson.css
@@ -1,81 +1,85 @@
 @CHARSET "UTF-8";
 /****** Page Styles ****/
 
-/*  Designed for 1200*900 px screen resolution  */ 
- 
+/*  Designed for 1200*900 px screen resolution  */
+
 
 /**** Game Styles  ****/
 
-#content{
-	position:relative;	
-	margin: 0 auto;
-	margin-top: 74px;
-	width: 1198px;
-	height: 750px;
-	background: url(../assets/image/background.jpg) no-repeat center;	
-	overflow-y:hidden;
+#content {
+    position: relative;
+    margin: 0 auto;
+    margin-top: 74px;
+    width: 1198px;
+    height: 750px;
+    background: url(../assets/image/background.jpg) no-repeat center;
+    overflow-y: hidden;
+}
 
+#vocabImg {
+    position: relative;
+    margin: 3em auto;
+    width: 1145px;
+    height: 660px;
+    background: url(../assets/image/vocabImg.jpg);
 }
-#vocabImg{
-	position:relative;
-	margin: 3em auto;
-	width: 1145px;
-	height: 660px;
-	background: url(../assets/image/vocabImg.jpg);
+
+#quesSection {
+    margin: 2em auto;
+    width: 80em;
+    height: 40em;
 }
-#quesSection{
-	margin: 2em auto;
-	width:80em;
-	height:40em;
+
+.imgArea {
+    float: left;
+    position: relative;
+    width: 185px;
+    height: 200px;
+    padding: 5px;
+    margin: 1em 2em;
 }
-	.imgArea{
-		float:left;
-		position:relative;
-		width: 185px;
-		height:  200px;
-		padding: 5px;
-		margin: 1em 2em;
-	}
-	
-	.imgObject{
-		position: relative;
-		width: 150px;	
-		height: 150px;	
-		margin: 0.25em;
-		padding-left: 50px;
-	}
-	
-	
-	
-#optionSection{
-	margin: 1em auto;
-	width: 1100px;	height: 60px;	padding : 2px;
-	border: 2px solid green;
-	text-align:center;
-	
-	color:black;
+
+.imgObject {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin: 0.25em;
+    padding-left: 50px;
 }
-	.gameOver{
-		font:  bold 40px Arial, Helvetica, sans-serif;
-		color:blue;
-	}
-	
-	.drophover{
-		background-color: #FF9900;
-	}
-	.backOpaque{
-			background-color: #A4A4A4;
-			opacity: 0.2;
-		}
-#help{
-	display:none;
-	position:absolute;
-	right: 60px;
-	top: 75px;;
-	width: 297px;
-	height: 697px;
-	background:url(../assets/image/help.png);
-	z-index:40;
+
+#optionSection {
+    margin: 1em auto;
+    width: 1100px;
+    height: 60px;
+    padding : 2px;
+    border: 2px solid green;
+    text-align: center;
+    color: black;
+}
+
+.gameOver {
+    font: bold 40px Arial, Helvetica, sans-serif;
+    color: blue;
+}
+
+.drophover {
+    background-color: #FF9900;
+}
+
+.backOpaque {
+    background-color: #A4A4A4;
+    opacity: 0.2;
+}
+
+#help {
+    display: none;
+    position: absolute;
+    right: 60px;
+    top: 75px;;
+    width: 297px;
+    height: 697px;
+    background: url(../assets/image/help.png);
+    z-index: 40;
 }
 
 .dropObjects {
